Move from gerrit to github

--- a/.env.example
+++ b/.env.example
@@ -12,9 +12,10 @@ JIRA_USERNAME=
 JIRA_PASSWORD=
 JIRA_CERT_PATH=${CERT_PATH}
 
-## Gerrit
+## GitHub
 ### Mandatory
-GERRIT_URL=
+GITHUB_OWNER=
+GITHUB_REPO=
 
 ## POLARION
 ### Mandatory
